--- a/package.json
+++ b/package.json
@@ -1,59 +1,80 @@
 {
-  "name": "react-frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development",
-    "cert": "./bin/generate_cert.sh server",
-    "host": "webpack-dev-server --mode development --devrig"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^0.28.11",
-    "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^4.0.0-beta.5",
-    "isomorphic-fetch": "^2.2.1",
-    "jest": "^23.6.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.3"
-  },
-  "dependencies": {
-    "jsonwebtoken": "^8.3.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ]
-  },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>/test/jestsetup.js"
-    ],
-    "transform": {
-      "^.+\\.js?$": "babel-jest"
+    "name": "song-requests",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "build": "webpack --mode production",
+        "start": "webpack-dev-server --mode development",
+        "cert": "./bin/generate_cert.sh server",
+        "host": "webpack-dev-server --mode development --devrig"
     },
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-jest": "^23.6.0",
+        "babel-loader": "^7.1.4",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
+        "clean-webpack-plugin": "^1.0.1",
+        "css-loader": "^0.28.11",
+        "enzyme": "^3.4.1",
+        "enzyme-adapter-react-16": "^1.2.0",
+        "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^4.0.0-beta.5",
+        "isomorphic-fetch": "^2.2.1",
+        "jest": "^23.6.0",
+        "style-loader": "^0.21.0",
+        "webpack": "^4.6.0",
+        "webpack-cli": "^3.1.0",
+        "webpack-dev-server": "^3.1.3"
+    },
+    "dependencies": {
+        "@apollo/react-hooks": "^3.0.0",
+        "@material-ui/core": "^4.3.2",
+        "@material-ui/icons": "^4.2.1",
+        "apollo-cache-inmemory": "^1.6.3",
+        "apollo-client": "^2.6.4",
+        "apollo-link-context": "^1.0.18",
+        "apollo-link-http": "^1.5.15",
+        "axios": "^0.19.0",
+        "graphql": "^14.4.2",
+        "graphql-tag": "^2.10.1",
+        "jsonwebtoken": "^8.3.0",
+        "lodash": "^4.17.15",
+        "moment": "^2.24.0",
+        "normalize.css": "^8.0.1",
+        "prop-types": "^15.7.2",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-router-dom": "^5.0.1",
+        "styled-components": "^4.3.2"
+    },
+    "babel": {
+        "presets": [
+            "env",
+            "react",
+            "babel-polyfill",
+            "stage-0"
+        ]
+    },
+    "jest": {
+        "setupFiles": [
+            "<rootDir>/test/jestsetup.js"
+        ],
+        "transform": {
+            "^.+\\.js?$": "babel-jest"
+        },
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+        }
     }
-  }
 }
